fix: mobile border clipping through navbar (#1780)

--- a/web/surfing/src/components/Container/CardCarousel/CardCarousel.module.scss
+++ b/web/surfing/src/components/Container/CardCarousel/CardCarousel.module.scss
@@ -102,6 +102,7 @@
     }
 
     .bottomNavbar {
+      background: black;
       position: absolute;
       bottom: -1.3em;
       display: flex;
